--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ button, a, [role="button"] {
           <label class="btn ghost" for="importAllInput" title="エクスポートしたZIPから丸ごと復元">
             全体インポート
           </label>
-          <input type="file" id="importAllInput" accept=".zip,application/zip" style="display:none" />
+          <input type="file" id="importAllInput" accept=".shimmy,application/x-shimmy" style="display:none" />
         </div>
       </section>
 
